# SnowflakeRust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  README.md  docker-compose.yml  start_server.sh
.github/workflows/: release.yml
benches/: cached_time_benchmark.rs  real_snowflake_comparison.rs  snowflake_performance.rs  time_comparison_detailed.rs
config/: worker.conf
examples/: basic_usage.rs  detailed_parse_test.rs  parse_id_example.rs
src/: lib.rs  snowflake.rs  snowflake_core.rs  time_provider.rs  worker_manager.rs
tests/: test_clock_backwards.rs
