[package]
name = "snowflake-generator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Snowflake ID generator with worker management and clock backward detection"
license = "MIT"
repository = "https://github.com/yourusername/snowflake-generator"
keywords = ["snowflake", "id-generator", "distributed", "uuid"]
categories = ["algorithms", "data-structures"]

[lib]
name = "snowflake_generator"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "test_clock"
path = "tests/test_clock_backwards.rs"

[[bin]]
name = "snowflake_server"
path = "src/bin/snowflake_server.rs"

[[bench]]
name = "cached_time_benchmark"
harness = false

[[bench]]
name = "snowflake_performance"
harness = false

[[bench]]
name = "real_snowflake_comparison"
harness = false

[[bench]]
name = "time_comparison_detailed"
harness = false

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Configuration
clap = { version = "4.0", features = ["derive"] }
# Error handling
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
